# my1stld

./: CMakeLists.txt  Makefile  entry.c  printf.c  printf.h  startup.s  test.s
lib/: CMakeLists.txt
lib/tinylibc/: CMakeLists.txt  _getchar.s  exit.s  printf.c
lib/tinylibc/include/: printf.h  tinylibc.h
src/: asmutil.s  asmutils.s  entry.c  printf.c  startup.s
src/include/: printf.h
t/: CMakeLists.txt  startup_test.s
t/got_linking/: CMakeLists.txt  lib.c  lib.h  startup.c
t/util/: exit.s
t/util/include/: util.h
